# ReferenceCountingGC

./: .gitignore  CMakeLists.txt  LICENSE  destroyer.h  gc.cpp  gc.h  gc_list.h  info.cpp  info.h  main.cpp  page.h  pointer.h  ref.h
.github/workflows/: cmake.yml
src/: main.cpp
src/gc/: destroyer.h  gc.cpp  gc.h  page.h  ref.h
